made class TamagatchiChar and tested instaniating it

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div id="tamagotchi">
 				<form>
 					<input type="text" placeholder="Tamagotchi Name" id="input-name">
-					<button type="submit">Name</button>
+					<button type="submit">Start</button>
 				</form>
 				<img src="images/tamagotchi egg.gif">
 			</div>
