--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 			<div id="tamagotchi">
 				<form>
-					<input type="text" placeholder="Tamagotchi Name" id="input-name">
+					<input type="text" placeholder="Name Your Tamagotchi" id="input-name">
 					<button type="submit">Start</button>
 				</form>
 				<img src="images/tamagotchi egg.gif">
