got tamagotchi to morph at age 2

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 				<button id="light"><img src="images/energy.png"><div id="lightImage"></div></button>
 				<button id="play"><img src="images/play.jpg"><div id=""></div></button>
 			</div>
-
 			<div id="tamagotchi">
 				<form>
 					<input type="text" placeholder="Name Your Tamagotchi" id="input-name">
@@ -24,10 +23,10 @@
 				<img src="images/tamagotchi egg.gif">
 			</div>
 			<div id="stats">
-				<div id="fullness"><p>Fullness:</p> 10</div><div id="rest"><p>Rest:</p> 10</div><div id="fun"><p>Fun:</p> 10</div><div id="age"><p>Age:</p> 0</div>
+				<div id="fullness"><p>Fullness:</p>10</div><div id="rest"><p>Rest:</p> 10</div><div id="fun"><p>Fun:</p> 10</div><div id="age"><p>Age:</p> 0</div>
 			</div>
 
-
+<!-- Sorry for all the bunched up html. CSS is hard -->
 
 		</div>
 
