now displays fullnes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<img src="images/tamagotchi egg.gif">
 			</div>
 			<div id="stats">
-				<div id="fullness"><p>Fullness:</p>10</div><div id="rest"><p>Rest:</p> 10</div><div id="fun"><p>Fun:</p> 10</div><div id="age"><p>Age:</p> 0</div>
+				<div id="fullness">Fullness: 10</div><div id="rest">Rest: 10</div><div id="fun">Fun: 10</div><div id="age">Age: 0</div>
 			</div>
 
 <!-- Sorry for all the bunched up html. CSS is hard -->
