player can now feed, goRest, and play

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<button id="play"><img src="images/play.jpg"><div id=""></div></button>
 			</div>
 			<div id="tamagotchi">
-				<form>
+				<form id="form">
 					<input type="text" placeholder="Name Your Tamagotchi" id="input-name">
 					<button type="submit">Start</button>
 				</form>
